style.css
*{
    margin: 0;
    padding: 0;
}


nav{
    background-color: rgb(37, 9 ,37);
    color: white;
    height: 65px;
    font-size: 27px;
    display: flex;
    align-items: center;
    padding: 0 12px;
    justify-content: center;

}

nav ul{
    list-style-type: none;

}

.gameContainer{
    display:flex;
    justify-content: center;
    align-items: center;
    padding: 32px;
}

.container{
    display:grid;

    grid-template-columns: repeat(3, 10vw);
    grid-template-rows: repeat(3, 10vw);
    
}

.box{
    border: 1px solid black;
    font-size: 8vw;
    display: flex;
    justify-content: center;
    align-items: center;
}

.box:hover{
    background-color: rgb(217, 180, 253);
}

.info {
    font-size: 22px;
}

.gameInfo{
    padding: 0 34px;
}

.imgbox img{
    width: 0;
    transition: width 1s ease-in-out;
}

.br-0{
    border-right: 0; 
}

.bl-0{
    border-left: 0;
}

.bt-0{
    border-top: 0;
}

.bd-0{
    border-bottom: 0;
}

#reset {
    margin: 0 23px;
    padding: 6px 14px;
    background: #e5c7e5;
    border-radius: 6px;
    cursor: pointer;
    font-size: 15px;
}
.copyrights{
    padding: 10px;
    display:flex;
    justify-content:right;
}

.developers{
    padding: 10px;
    display:flex;
    justify-content:right;
}

